syntax = "proto3";
package crowlabs.gamma.escrow;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "escrow/params.proto";
import "escrow/crow.proto";
// this line is used by starport scaffolding # 1
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/crow-labs/gamma/x/escrow/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crow-labs/gamma/escrow/params";
  }
  // Queries a Crow by index.
	rpc Crow(QueryGetCrowRequest) returns (QueryGetCrowResponse) {
		option (google.api.http).get = "/crow-labs/gamma/escrow/crow/{listingId}/{orderId}";
	}

	// Queries a list of Crow items.
	rpc CrowAll(QueryAllCrowRequest) returns (QueryAllCrowResponse) {
		option (google.api.http).get = "/crow-labs/gamma/escrow/crow";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetCrowRequest {
	  string listingId = 1;
  string orderId = 2;

}

message QueryGetCrowResponse {
	Crow crow = 1 [(gogoproto.nullable) = false];
}

message QueryAllCrowRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCrowResponse {
	repeated Crow crow = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
